tests/sumo/extended/calibrator/errors/2flows_sameInterval_noEnd/errors.sumo
Error: Overlapping or unsorted intervals in calibrator 'calibtest'.
Quitting (on error).
